packages/rust/holy/tests/fail/01-enum-not-supported.rs
use holy::Getters;

#[derive(Getters)]
enum Nope {
	A,
	B,
}

fn main() {}
